1547 README for JVM args